# marketing-automation-desktop

./: .dependency-cruiser.cjs  .env.ai.example  .env.example  .eslintrc.cjs  .gitignore  .gitmodules  ADB_CONNECTION_TEST_GUIDE.md  AGENTS.md  ANTI_CONFUSION_GUIDE.md  ANT_DESIGN_NATIVE_THEME_REPORT.md  ARCHITECTURE_ANALYSIS_AND_OPTIMIZATION_PLAN.md  ARCHITECTURE_DIAGRAM_ANALYSIS_REPORT.md  ARCHITECTURE_DIAGRAM_FIX_REPORT.md  ARCHITECTURE_HIERARCHY_DEBUG_REPORT.md  ARCHITECTURE_INTEGRATION_PLAN.md  ARCHITECTURE_OPTIMIZATION_COMPLETE.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHITECTURE_REFACTOR_PLAN.md  AUTO_DEVICE_DETECTION_GUIDE.md  AUTO_DEVICE_DETECTION_INTEGRATION_REPORT.md  AUTO_DEVICE_REFRESH_FIX_REPORT.md  BATCH_EXECUTION_FIX_REPORT.md  BATCH_EXECUTION_GUIDE.md  BATCH_LOGIC_COMPLETENESS_ANALYSIS.md  BRAND_REFACTOR_COMPLETION_REPORT.md  BRAND_REFACTOR_REPORT.md  BUG_FIX_SUMMARY.md  BUG_FIX_VISUAL_ELEMENTS_NOT_UPDATING.md  BUTTON_FIX_ANTI_CONFUSION_GUIDE.md  BUTTON_FIX_CONFUSION_CHECK_REPORT.md  CHANGELOG-EnhancedStepCard-Removal.md  CHILD_ELEMENTS_DEBUG_GUIDE.md  CHILD_ELEMENTS_DISCOVERY_ENHANCEMENT.md  CHILD_ELEMENTS_EXTRACTION_FIX_COMPLETE.md  CHILD_ELEMENT_INTEGRATION_REPORT.md  CHILD_ELEMENT_SELECTOR_COMPLETION_REPORT.md  CHILD_ELEMENT_TESTING_GUIDE.md  CI_CD_INFRASTRUCTURE_REPORT.md  CLICKABLE_ELEMENTS_FIX_REPORT.md  CLICK_WRONG_ELEMENT_ROOT_CAUSE.md  (+575 more)
server/: .env.example  Cargo.toml  deploy.ps1  lead-server.service
server/src/: config.rs  main.rs
server/src/api/: admin.rs  ai_config.rs  auth.rs  comments.rs  device.rs  mod.rs  stats.rs
server/src/db/: comments.rs  device_configs.rs  mod.rs  schema.rs  users.rs
src-tauri/: Cargo.toml  Cargo_test.toml  cargo_check.txt  check_errors.txt  check_output.txt  fix-main-rs.patch  fix_commands.ps1  fix_commands_errors.ps1  fix_compilation_errors.ps1  fix_compilation_errors_v2.ps1  tauri.conf.json  test_bounds_parse.rs  test_intelligence_manual.rs  update_imports.ps1  verify_db.rs
src-tauri/permissions/: adb.toml  agent.toml  automation.toml  contacts.toml  employees.toml  enhanced-location.toml  execution-v3.toml  file-manager.toml  image-optimization.toml  intelligent-analysis.toml  lead-hunt.toml  prospecting.toml  script-manager.toml  smart-selection.toml  system-diagnostic.toml  ui-dump.toml  universal-ui.toml  version-control.toml  xml-cache.toml
src-tauri/src/: config.rs  lib.rs  main.rs  main_backup.rs  main_backup_before_refactor.rs
src-tauri/src-tauri/: check_output.txt
src-tauri/src/ai/: ai_config.rs  ai_types.rs  commands.rs  config.rs  mod.rs  provider.rs  router.rs  types.rs
src-tauri/src/application/: normalizer.rs
src-tauri/src/automation/: engine.rs  events.rs  mod.rs
src-tauri/src/commands/: action_execution.rs  adb.rs  analysis_cache.rs  app_lifecycle_commands.rs  apps.rs  automation_commands.rs  click_normalizer_test.rs  commands_lead_hunt.rs  debug_paths.rs  enhanced_location_commands.rs  execute_structure_match.rs  files.rs  groups.rs  health_check.rs  image_optimization.rs  intelligent_analysis.rs  intelligent_analysis_backup.rs  legacy_smart_finder.rs  macros.rs  mod.rs  page_analysis.rs  prospecting.rs  registration.rs  registry.rs  run_step_v2.rs  run_step_v2_backup2.rs  semantic_analyzer_config.rs  smart_selection.rs  step_execution.rs  strategy_matching.rs  structural_matching.rs  structure_match_runtime.rs  structure_recommend.rs  ui_dump.rs  universal_ui.rs  xml_cache.rs  xpath_execution.rs
src-tauri/src/core/: bootstrap.rs  mod.rs
src-tauri/src/db/: lead_analyses.rs  lead_comments.rs  migrations.rs  mod.rs  replay_plans.rs  schema.rs  seed.rs
src-tauri/src/device/: mock.rs  mod.rs  orchestrator.rs  provider.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/engine/: gating.rs  index_path_locator.rs  mod.rs  strategy_engine.rs  (+5 more)
src-tauri/tests/: decision_chain_test.rs  intelligent_analysis_test.rs
(+4188 files in other folders)
