# Workspace 根配置
# 管理 PC 端 (src-tauri) 和 服务器端 (server) 的共享依赖

[workspace]
members = [
    "src-tauri",
    "server",
]
resolver = "2"

# 共享依赖版本 - 所有子项目可以用 xxx.workspace = true 继承
[workspace.dependencies]
# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Web 框架 (Axum)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
