[package]
name = "employee-gui"
version = "0.2.0"
description = "Employee Management System"
authors = ["you"]
license = ""
repository = ""
default-run = "employee-gui"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rusqlite = { version = "0.29", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
csv = "1.3"
regex = "1.10"
encoding_rs = "0.8"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
quick-xml = "0.35"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
lazy_static = "1.4"
async-trait = "0.1"
parking_lot = "0.12"
keyring = "2"
futures-util = "0.3"
dirs = "5.0"
colored = "2.1"
md5 = "0.7"
once_cell = "1.19"
dashmap = "5.5"
xxhash-rust = { version = "0.8", features = ["xxh3", "xxh64"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
filetime = "0.2"
roxmltree = "0.20"
## Pin transitive windows-core to satisfy iana-time-zone (<=0.62)
windows-core = "=0.62.0"
base64 = { version = "0.22", default-features = false, features = ["std"] }
sha1 = "0.10"
# Phase 3 Version Control System Dependencies
zstd = "0.13"                    # Zstandard 压缩
ciborium = "0.2"                 # CBOR 序列化/反序列化
thiserror = "1.0"                # 错误处理宏
# Image Processing Dependencies
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "webp"] }

[dev-dependencies]
tempfile = "3.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
